--- a/OunoRentAdminPanel/wwwroot/sneat/html/horizontal-menu-template/auth-forgot-password-cover.html
+++ b/OunoRentAdminPanel/wwwroot/sneat/html/horizontal-menu-template/auth-forgot-password-cover.html
@@ -15,7 +15,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>Forgot Password Cover - Pages | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>
+    <title>Ouno Rent Şifremi Unuttum</title>
 
     <meta name="description" content="" />
 
@@ -140,12 +140,12 @@
                     </g>
                   </svg>
                 </span>
-                <span class="app-brand-text demo demo text-body fw-bolder">Sneat</span>
+                <span class="app-brand-text demo demo text-body fw-bolder" style="text-transform: uppercase;">Ouno Rent</span>
               </a>
             </div>
             <!-- /Logo -->
-            <h4 class="mb-2">Forgot Password? 🔒</h4>
-            <p class="mb-4">Enter your email and we'll send you instructions to reset your password</p>
+            <h4 class="mb-2">Şifremi unuttum? 🔒</h4>
+            <p class="mb-4">Email adresinizi girin, size şifrenizi sıfırlamak için bir link göndereceğiz</p>
             <form id="formAuthentication" class="mb-3" action="auth-reset-password-cover.html" method="POST">
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
@@ -154,16 +154,16 @@
                   class="form-control"
                   id="email"
                   name="email"
-                  placeholder="Enter your email"
+                  placeholder="Email giriniz"
                   autofocus
                 />
               </div>
-              <button class="btn btn-primary d-grid w-100">Send Reset Link</button>
+              <button class="btn btn-primary d-grid w-100">Şifre Sıfırlama Linkini Gönder</button>
             </form>
             <div class="text-center">
               <a href="auth-login-cover.html" class="d-flex align-items-center justify-content-center">
                 <i class="bx bx-chevron-left scaleX-n1-rtl bx-sm"></i>
-                Back to login
+                Giriş ekranına geri dön
               </a>
             </div>
           </div>
