--- a/OunoRentAdminPanel/wwwroot/sneat/html/horizontal-menu-template/auth-reset-password-basic.html
+++ b/OunoRentAdminPanel/wwwroot/sneat/html/horizontal-menu-template/auth-reset-password-basic.html
@@ -15,7 +15,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>Reset Password Basic - Pages | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>
+    <title>Ouno Rent Şifremi Sıfırla </title>
 
     <meta name="description" content="" />
 
@@ -126,15 +126,15 @@
                       </g>
                     </svg>
                   </span>
-                  <span class="app-brand-text demo text-body fw-bolder">Sneat</span>
+                  <span class="app-brand-text demo text-body fw-bolder" style="text-transform: uppercase;">Ouno Rent</span>
                 </a>
               </div>
               <!-- /Logo -->
-              <h4 class="mb-2">Reset Password 🔒</h4>
+              <h4 class="mb-2">Şifre Sıfırlama 🔒</h4>
               <p class="mb-4">for <span class="fw-bold">john.doe@email.com</span></p>
               <form id="formAuthentication" class="mb-3" action="auth-login-basic.html" method="POST">
                 <div class="mb-3 form-password-toggle">
-                  <label class="form-label" for="password">New Password</label>
+                  <label class="form-label" for="password">Yeni Şifre</label>
                   <div class="input-group input-group-merge">
                     <input
                       type="password"
@@ -148,7 +148,7 @@
                   </div>
                 </div>
                 <div class="mb-3 form-password-toggle">
-                  <label class="form-label" for="confirm-password">Confirm Password</label>
+                  <label class="form-label" for="confirm-password">Şifreyi Onayla</label>
                   <div class="input-group input-group-merge">
                     <input
                       type="password"
@@ -161,11 +161,11 @@
                     <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
                   </div>
                 </div>
-                <button class="btn btn-primary d-grid w-100 mb-3">Set new password</button>
+                <button class="btn btn-primary d-grid w-100 mb-3">Yeni Şifre Belirle</button>
                 <div class="text-center">
                   <a href="auth-login-basic.html">
                     <i class="bx bx-chevron-left scaleX-n1-rtl bx-sm"></i>
-                    Back to login
+                    Giriş ekranına dön
                   </a>
                 </div>
               </form>
