--- a/OunoRentAdminPanel/wwwroot/sneat/html/vertical-menu-template/dashboards-analytics.html
+++ b/OunoRentAdminPanel/wwwroot/sneat/html/vertical-menu-template/dashboards-analytics.html
@@ -15,7 +15,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>Dashboard - Analytics | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>
+    <title>Ouno Rent Dashboard</title>
 
     <meta name="description" content="" />
 
@@ -121,7 +121,7 @@
                   </g>
                 </svg>
               </span>
-              <span class="app-brand-text demo menu-text fw-bolder ms-2">Sneat</span>
+              <span class="app-brand-text demo menu-text fw-bolder ms-2" style="text-transform: uppercase;">Ouno Rent</span>
             </a>
 
             <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto">
@@ -136,26 +136,44 @@
             <li class="menu-item active open">
               <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-home-circle"></i>
-                <div data-i18n="Dashboards">Dashboards</div>
+                <div data-i18n="Anasayfa">Anasayfa</div>
               </a>
               <ul class="menu-sub">
-                <li class="menu-item active">
-                  <a href="dashboards-analytics.html" class="menu-link">
-                    <div data-i18n="Analytics">Analytics</div>
+                  <a href="" class="menu-link">
+                    <i class='menu-icon bx bxs-report'></i>
+                    <div data-i18n="Raporlar">Raporlar</div>
+                  </a>
+                </li>
+                  <a href="" class="menu-link">
+                    <i class='menu-icon bx bxs-package'></i>
+                    <div data-i18n="Ürün Yönetimi">Ürün Yönetimi</div>
+                  </a>
+                </li>
+                  <a href="" class="menu-link">
+                    <i class="menu-icon tf-icons bx bx-user"></i>
+                    <div data-i18n="Kullanıcı Yönetimi">Kullanıcı Yönetimi</div>
+                  </a>
+                </li>
+                  <a href="" class="menu-link">
+                    <i class="menu-icon tf-icons bx bx-support"></i>
+                    <div data-i18n="Müşteri Hizmetleri">Müşteri Hizmetleri</div>
+                  </a>
+                </li>
+                  <a href="" class="menu-link">
+                    <i class="menu-icon tf-icons bx bxs-star"></i>             
+                     <div data-i18n="Kampanyalar">Kampanyalar</div>
+                  </a>
+                </li>
+                  <a href="" class="menu-link">
+                    <i class="menu-icon tf-icons bx bxs-file-blank"></i>
+                    <div data-i18n="Hukuki Metinler">Hukuki Metinler</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="dashboards-crm.html" class="menu-link">
-                    <div data-i18n="CRM">CRM</div>
+                  <a href="" class="menu-link">
+                    <i class="menu-icon tf-icons bx bx-check-shield"></i>
+                    <div data-i18n="Rol Yönetimi">Rol Yönetimi</div>
                   </a>
-                </li>
-                <li class="menu-item">
-                  <a href="dashboards-ecommerce.html" class="menu-link">
-                    <div data-i18n="eCommerce">eCommerce</div>
-                  </a>
-                </li>
-              </ul>
-            </li>
 
             <!-- Layouts -->
             <li class="menu-item">
